--- a/tsdown.config.json
+++ b/tsdown.config.json
@@ -1,5 +1,5 @@
 {
-	"entry": ["src/**/*.ts"],
+	"entry": ["src/**/*.ts", "!src/tests/**", "!src/examples/**"],
 	"format": ["esm"],
 	"dts": true,
 	"clean": true,
