Add documentation site with Astro + Panda CSS
- Implement complete documentation site using Astro and Panda CSS
- Create responsive layout with header, sidebar navigation, and footer
- Add custom design tokens (colors, typography, spacing)
- Create three initial pages: home, quick start, and API overview
- Set up GitHub Actions workflow for automatic deployment to GitHub Pages
- Add root README with links to documentation
- Configure dprint to exclude docs build artifacts
- Add OpenSpec change proposal for documentation site

--- a/dprint.jsonc
+++ b/dprint.jsonc
@@ -26,7 +26,9 @@
 		"dist",
 		"_docs",
 		"*.min.js",
-		"coverage"
+		"coverage",
+		"docs/styled-system",
+		"docs/dist"
 	],
 	"plugins": [
 		"https://plugins.dprint.dev/markdown-0.20.0.wasm",
