Add Pagefind search and dark mode to documentation site
- Install Pagefind and configure build script to index after build
- Add dark mode toggle in header with theme persistence via localStorage
- Implement CSS custom properties for dark mode theming
- Update all components (Header, Footer, Navigation, DocsLayout) with dark mode support
- Add Pagefind search UI to main content area
- Fix mobile menu to close when clicking navigation links
- Ensure hamburger button visibility on all mobile pages

--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,7 @@
 		"prepare": "panda codegen",
 		"d": "astro dev",
 		"s": "astro start",
-		"b": "astro build",
+		"b": "astro build && pagefind --site dist",
 		"p": "astro preview"
 	},
 	"devDependencies": {
@@ -16,7 +16,8 @@
 		"@pandacss/astro": "^0.25.0",
 		"@pandacss/dev": "^1.8.1",
 		"@types/bun": "latest",
-		"astro": "^5.16.11"
+		"astro": "^5.16.11",
+		"pagefind": "^1.4.0"
 	},
 	"peerDependencies": {
 		"typescript": "^5.9.3"
