feat: add comprehensive test suite with 169 tests
- Add 169 comprehensive tests (unit, integration, E2E)
- Create test infrastructure with utilities and helpers
- Add testing documentation guide
- Update OpenSpec with testing capability spec
- Expand from 11 to 169 tests (1436% increase)

Tests cover:
- Client: reconnection, typed requests, validation (40 tests)
- Server: handlers, responses, Elysia integration (23 tests)
- Shared: protocol, serialization, schemas, utils (70 tests)
- Integration: connection flows, reconnection, messaging (18 tests)
- E2E: ping-pong scenarios, authentication flows (13 tests)

All tests passing. Ready for v1.2.0 release.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"b": "tsdown",
 		"d": "echo 'dev mode - import from source'",
 		"s": "echo 'start not configured'",
-		"p": "echo 'preview not configured'"
+		"p": "echo 'preview not configured'",
+		"t": "bun test"
 	},
 	"publishConfig": {
 		"main": "./dist/index.mjs",
