docs: fix import paths and styling issues
- Remove /v001 from all import paths (now @mdrv/wsx/client, /server, /shared)
- Add subpath exports to package.json for client, server, and shared modules
- Fix code block styling in Exponential Backoff section (add 'text' language)
- Update README.md with correct import paths

--- a/package.json
+++ b/package.json
@@ -32,6 +32,18 @@
 			".": {
 				"default": "./dist/index.mjs",
 				"types": "./dist/index.d.mts"
+			},
+			"./client": {
+				"default": "./dist/client/index.mjs",
+				"types": "./dist/client/index.d.mts"
+			},
+			"./server": {
+				"default": "./dist/server/index.mjs",
+				"types": "./dist/server/index.d.mts"
+			},
+			"./shared": {
+				"default": "./dist/shared/index.mjs",
+				"types": "./dist/shared/index.d.mts"
 			}
 		}
 	},
